--- a/index.html
+++ b/index.html
@@ -716,12 +716,14 @@
 
   <!-- الاسم الكامل -->
   <label>الاسم الكامل</label>
-  <input type="text" name="entry.527034430" placeholder="الاسم الكامل" required>
+  <input type="text" name="entry.527034430"
+      placeholder="الاسم الكامل" required>
 
   <!-- رقم الهاتف -->
   <label>رقم الهاتف</label>
-  <input type="tel" name="entry.669654427" placeholder=")رقم الهاتف
-      10(أرقام "  pattern="[0-9]{10}" required>
+  <input type="tel" name="entry.669654427"
+      placeholder=")رقم الهاتف
+        pattern="[0-9]{10}" required>
 
   <!-- الولاية -->
   <label>الولاية</label>
@@ -1113,7 +1115,9 @@ function redirectToThankYou() {
 
 
 
+
     
+
 
 
 
