--- a/index.html
+++ b/index.html
@@ -715,70 +715,71 @@
       onsubmit="submitted=true;">
 
   <!-- الاسم الكامل -->
-  <label>الاسم الكامل</label>
-  <input type="text" name="entry.527034430"
-      placeholder="الاسم الكامل" required>
+<label for="name">الاسم الكامل</label>
+<input type="text" id="name" name="entry.1234567890" placeholder="ادخل اسمك الكامل" required>
 
-  <!-- رقم الهاتف -->
-  <label>رقم الهاتف</label>
-  <input type="tel" name="entry.669654427"
-      placeholder=")رقم الهاتف
-        pattern="[0-9]{10}" required>
+<!-- رقم الهاتف -->
+<label for="phone">رقم الهاتف</label>
+<input type="tel" id="phone" name="entry.0987654321" placeholder="ادخل رقم الهاتف" required pattern="[0-9]{10}" title="أدخل 10 أرقام صحيحة">
 
-  <!-- الولاية -->
-  <label>الولاية</label>
-  <select id="wilaya" name="entry.1308558217" required onchange="calculateTotal()">
-    <option value="" disabled selected>اختر ولايتك</option>
-    <option value="01 الجزائر – 400 DA" data-price="400">01 الجزائر – 400 DA</option>
-    <option value="02 الشلف – 500 DA" data-price="500">02 الشلف – 500 DA</option>
-    <option value="03 الأغواط – 600 DA" data-price="600">03 الأغواط – 600 DA</option>
-    <option value="04 أم البواقي – 600 DA" data-price="600">04 أم البواقي – 600 DA</option>
-    <option value="05 باتنة – 600 DA" data-price="600">05 باتنة – 600 DA</option>
-    <option value="06 بجاية – 500 DA" data-price="500">06 بجاية – 500 DA</option>
-    <option value="07 بسكرة – 600 DA" data-price="600">07 بسكرة – 600 DA</option>
-    <option value="08 بشار – 700 DA" data-price="700">08 بشار – 700 DA</option>
-    <option value="09 البليدة – 400 DA" data-price="400">09 البليدة – 400 DA</option>
-    <option value="10 البويرة – 500 DA" data-price="500">10 البويرة – 500 DA</option>
-    <option value="11 تمنراست – 800 DA" data-price="800">11 تمنراست – 800 DA</option>
-    <option value="12 تبسة – 600 DA" data-price="600">12 تبسة – 600 DA</option>
-    <option value="13 تلمسان – 500 DA" data-price="500">13 تلمسان – 500 DA</option>
-    <option value="14 تيارت – 500 DA" data-price="500">14 تيارت – 500 DA</option>
-    <option value="15 تيزي وزو – 500 DA" data-price="500">15 تيزي وزو – 500 DA</option>
-    <option value="16 الجزائر – 400 DA" data-price="400">16 الجزائر – 400 DA</option>
-    <option value="17 الجلفة – 600 DA" data-price="600">17 الجلفة – 600 DA</option>
-    <option value="18 جيجل – 500 DA" data-price="500">18 جيجل – 500 DA</option>
-    <option value="19 سطيف – 500 DA" data-price="500">19 سطيف – 500 DA</option>
-    <option value="20 سعيدة – 600 DA" data-price="600">20 سعيدة – 600 DA</option>
-    <option value="21 سكيكدة – 600 DA" data-price="600">21 سكيكدة – 600 DA</option>
-    <option value="22 سيدي بلعباس – 500 DA" data-price="500">22 سيدي بلعباس – 500 DA</option>
-    <option value="23 عنابة – 600 DA" data-price="600">23 عنابة – 600 DA</option>
-    <option value="24 قالمة – 600 DA" data-price="600">24 قالمة – 600 DA</option>
-    <option value="25 قسنطينة – 600 DA" data-price="600">25 قسنطينة – 600 DA</option>
-    <option value="26 المدية – 500 DA" data-price="500">26 المدية – 500 DA</option>
-    <option value="27 مستغانم – 500 DA" data-price="500">27 مستغانم – 500 DA</option>
-    <option value="28 المسيلة – 600 DA" data-price="600">28 المسيلة – 600 DA</option>
-    <option value="29 معسكر – 500 DA" data-price="500">29 معسكر – 500 DA</option>
-    <option value="30 ورقلة – 700 DA" data-price="700">30 ورقلة – 700 DA</option>
-    <option value="31 وهران – 500 DA" data-price="500">31 وهران – 500 DA</option>
-    <option value="32 البيض – 700 DA" data-price="700">32 البيض – 700 DA</option>
-    <option value="33 إليزي – 800 DA" data-price="800">33 إليزي – 800 DA</option>
-    <option value="34 برج بوعريريج – 600 DA" data-price="600">34 برج بوعريريج – 600 DA</option>
-    <option value="35 بومرداس – 500 DA" data-price="500">35 بومرداس – 500 DA</option>
-    <option value="36 الطارف – 600 DA" data-price="600">36 الطارف – 600 DA</option>
-    <option value="37 تندوف – 800 DA" data-price="800">37 تندوف – 800 DA</option>
-    <option value="38 تسمسيلت – 600 DA" data-price="600">38 تسمسيلت – 600 DA</option>
-    <option value="39 الوادي – 700 DA" data-price="700">39 الوادي – 700 DA</option>
-    <option value="40 خنشلة – 600 DA" data-price="600">40 خنشلة – 600 DA</option>
-    <option value="41 سوق أهراس – 600 DA" data-price="600">41 سوق أهراس – 600 DA</option>
-    <option value="42 تيبازة – 500 DA" data-price="500">42 تيبازة – 500 DA</option>
-    <option value="43 ميلة – 600 DA" data-price="600">43 ميلة – 600 DA</option>
-    <option value="44 عين الدفلى – 500 DA" data-price="500">44 عين الدفلى – 500 DA</option>
-    <option value="45 النعامة – 700 DA" data-price="700">45 النعامة – 700 DA</option>
-    <option value="46 عين تموشنت – 500 DA" data-price="500">46 عين تموشنت – 500 DA</option>
-    <option value="47 غرداية – 700 DA" data-price="700">47 غرداية – 700 DA</option>
-    <option value="48 غليزان – 500 DA" data-price="500">48 غليزان – 500 DA</option>
-  </select>
+<!-- الولاية -->
+<label for="state">الولاية</label>
+<select id="state" name="entry.1122334455" style="width: 260px;" required>
+  <option value="">اختر ولايتك</option>
+  <option value="أدرار">أدرار</option>
+  <option value="الشلف">الشلف</option>
+  <option value="الأغواط">الأغواط</option>
+  <option value="أم البواقي">أم البواقي</option>
+  <option value="باتنة">باتنة</option>
+  <option value="بجاية">بجاية</option>
+  <option value="بسكرة">بسكرة</option>
+  <option value="بشار">بشار</option>
+  <option value="البليدة">البليدة</option>
+  <option value="البويرة">البويرة</option>
+  <option value="تمنراست">تمنراست</option>
+  <option value="تبسة">تبسة</option>
+  <option value="تلمسان">تلمسان</option>
+  <option value="تيارت">تيارت</option>
+  <option value="تيزي وزو">تيزي وزو</option>
+  <option value="الجزائر">الجزائر</option>
+  <option value="الجلفة">الجلفة</option>
+  <option value="جيجل">جيجل</option>
+  <option value="سطيف">سطيف</option>
+  <option value="سعيدة">سعيدة</option>
+  <option value="سكيكدة">سكيكدة</option>
+  <option value="سيدي بلعباس">سيدي بلعباس</option>
+  <option value="عنابة">عنابة</option>
+  <option value="قالمة">قالمة</option>
+  <option value="قسنطينة">قسنطينة</option>
+  <option value="المدية">المدية</option>
+  <option value="مستغانم">مستغانم</option>
+  <option value="المسيلة">المسيلة</option>
+  <option value="معسكر">معسكر</option>
+  <option value="ورقلة">ورقلة</option>
+  <option value="وهران">وهران</option>
+  <option value="البيض">البيض</option>
+  <option value="إليزي">إليزي</option>
+  <option value="برج بوعريريج">برج بوعريريج</option>
+  <option value="بومرداس">بومرداس</option>
+  <option value="الطارف">الطارف</option>
+  <option value="تندوف">تندوف</option>
+  <option value="تيسمسيلت">تيسمسيلت</option>
+  <option value="الوادي">الوادي</option>
+  <option value="خنشلة">خنشلة</option>
+  <option value="سوق أهراس">سوق أهراس</option>
+  <option value="تيبازة">تيبازة</option>
+  <option value="ميلة">ميلة</option>
+  <option value="عين الدفلى">عين الدفلى</option>
+  <option value="النعامة">النعامة</option>
+  <option value="عين تموشنت">عين تموشنت</option>
+  <option value="غرداية">غرداية</option>
+  <option value="غليزان">غليزان</option>
+</select>
 
+<!-- سعر التوصيل -->
+<p style="margin-top:10px; font-weight:bold; color:#444;">
+🚚 سعر التوصيل: يختلف حسب الولاية (مثال: 600 دج)
+</p>
   <!-- المجموع الكلي -->
   <label>المجموع الكلي (سعر المنتج + التوصيل)</label>
   <input type="text" id="total" name="entry.1397734668" readonly>
@@ -1116,7 +1117,9 @@ function redirectToThankYou() {
 
 
 
+
     
+
 
 
 
