--- a/index.html
+++ b/index.html
@@ -709,88 +709,126 @@
   }
 </style>
 
-<form action="https://docs.google.com/forms/d/e/1FAIpQLSepnNx6IBDOcwYu1h1ITUVMVdZ8-YGo7bj9MbEosnUDcyrDQg/formResponse"
-      method="POST"
-      target="hidden_iframe"
-      onsubmit="submitted=true;">
-
+<form id="orderForm" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSepnNx6IBDOcwYu1h1ITUVMVdZ8-YGo7bj9MbEosnUDcyrDQg/formResponse" target="hidden_iframe" onsubmit="return handleSubmit()">
   <!-- الاسم الكامل -->
-<label for="name">الاسم الكامل</label>
-<input type="text" id="name" name="entry.1234567890" placeholder="ادخل اسمك الكامل" required>
+  <input type="text" name="entry.527034430" id="name" placeholder="الاسم الكامل" required>
 
-<!-- رقم الهاتف -->
-<label for="phone">رقم الهاتف</label>
-<input type="tel" id="phone" name="entry.0987654321" placeholder="ادخل رقم الهاتف" required pattern="[0-9]{10}" title="أدخل 10 أرقام صحيحة">
+  <!-- رقم الهاتف -->
+  <input type="tel" name="entry.669654427" id="phone" placeholder="رقم الهاتف" required pattern="[0-9]{10}">
 
-<!-- الولاية -->
-<label for="state">الولاية</label>
-<select id="state" name="entry.1122334455" style="width: 260px;" required>
-  <option value="">اختر ولايتك</option>
-  <option value="أدرار">أدرار</option>
-  <option value="الشلف">الشلف</option>
-  <option value="الأغواط">الأغواط</option>
-  <option value="أم البواقي">أم البواقي</option>
-  <option value="باتنة">باتنة</option>
-  <option value="بجاية">بجاية</option>
-  <option value="بسكرة">بسكرة</option>
-  <option value="بشار">بشار</option>
-  <option value="البليدة">البليدة</option>
-  <option value="البويرة">البويرة</option>
-  <option value="تمنراست">تمنراست</option>
-  <option value="تبسة">تبسة</option>
-  <option value="تلمسان">تلمسان</option>
-  <option value="تيارت">تيارت</option>
-  <option value="تيزي وزو">تيزي وزو</option>
-  <option value="الجزائر">الجزائر</option>
-  <option value="الجلفة">الجلفة</option>
-  <option value="جيجل">جيجل</option>
-  <option value="سطيف">سطيف</option>
-  <option value="سعيدة">سعيدة</option>
-  <option value="سكيكدة">سكيكدة</option>
-  <option value="سيدي بلعباس">سيدي بلعباس</option>
-  <option value="عنابة">عنابة</option>
-  <option value="قالمة">قالمة</option>
-  <option value="قسنطينة">قسنطينة</option>
-  <option value="المدية">المدية</option>
-  <option value="مستغانم">مستغانم</option>
-  <option value="المسيلة">المسيلة</option>
-  <option value="معسكر">معسكر</option>
-  <option value="ورقلة">ورقلة</option>
-  <option value="وهران">وهران</option>
-  <option value="البيض">البيض</option>
-  <option value="إليزي">إليزي</option>
-  <option value="برج بوعريريج">برج بوعريريج</option>
-  <option value="بومرداس">بومرداس</option>
-  <option value="الطارف">الطارف</option>
-  <option value="تندوف">تندوف</option>
-  <option value="تيسمسيلت">تيسمسيلت</option>
-  <option value="الوادي">الوادي</option>
-  <option value="خنشلة">خنشلة</option>
-  <option value="سوق أهراس">سوق أهراس</option>
-  <option value="تيبازة">تيبازة</option>
-  <option value="ميلة">ميلة</option>
-  <option value="عين الدفلى">عين الدفلى</option>
-  <option value="النعامة">النعامة</option>
-  <option value="عين تموشنت">عين تموشنت</option>
-  <option value="غرداية">غرداية</option>
-  <option value="غليزان">غليزان</option>
-</select>
+  <!-- الولاية -->
+  <select name="entry.1308558217" id="wilaya" required>
+    <option value="">اختر ولايتك</option>
+    <option value="أدرار">أدرار</option>
+    <option value="الشلف">الشلف</option>
+    <option value="الأغواط">الأغواط</option>
+    <option value="أم البواقي">أم البواقي</option>
+    <option value="باتنة">باتنة</option>
+    <option value="بجاية">بجاية</option>
+    <option value="بسكرة">بسكرة</option>
+    <option value="بشار">بشار</option>
+    <option value="البليدة">البليدة</option>
+    <option value="البويرة">البويرة</option>
+    <option value="تمنراست">تمنراست</option>
+    <option value="تبسة">تبسة</option>
+    <option value="تلمسان">تلمسان</option>
+    <option value="تيارت">تيارت</option>
+    <option value="تيزي وزو">تيزي وزو</option>
+    <option value="الجزائر">الجزائر</option>
+    <option value="الجلفة">الجلفة</option>
+    <option value="جيجل">جيجل</option>
+    <option value="سطيف">سطيف</option>
+    <option value="سعيدة">سعيدة</option>
+    <option value="سكيكدة">سكيكدة</option>
+    <option value="سيدي بلعباس">سيدي بلعباس</option>
+    <option value="عنابة">عنابة</option>
+    <option value="قالمة">قالمة</option>
+    <option value="قسنطينة">قسنطينة</option>
+    <option value="المدية">المدية</option>
+    <option value="مستغانم">مستغانم</option>
+    <option value="المسيلة">المسيلة</option>
+    <option value="معسكر">معسكر</option>
+    <option value="ورقلة">ورقلة</option>
+    <option value="وهران">وهران</option>
+    <option value="البيض">البيض</option>
+    <option value="إليزي">إليزي</option>
+    <option value="برج بوعريريج">برج بوعريريج</option>
+    <option value="بومرداس">بومرداس</option>
+    <option value="الطارف">الطارف</option>
+    <option value="تندوف">تندوف</option>
+    <option value="تيسمسيلت">تيسمسيلت</option>
+    <option value="الوادي">الوادي</option>
+    <option value="خنشلة">خنشلة</option>
+    <option value="سوق أهراس">سوق أهراس</option>
+    <option value="تيبازة">تيبازة</option>
+    <option value="ميلة">ميلة</option>
+    <option value="عين الدفلى">عين الدفلى</option>
+    <option value="النعامة">النعامة</option>
+    <option value="عين تموشنت">عين تموشنت</option>
+    <option value="غرداية">غرداية</option>
+    <option value="غليزان">غليزان</option>
+    <option value="تيميمون">تيميمون</option>
+    <option value="برج باجي مختار">برج باجي مختار</option>
+    <option value="بني عباس">بني عباس</option>
+    <option value="أولاد جلال">أولاد جلال</option>
+    <option value="إن صالح">إن صالح</option>
+    <option value="إن قزام">إن قزام</option>
+    <option value="تقرت">تقرت</option>
+    <option value="جانت">جانت</option>
+    <option value="المغير">المغير</option>
+    <option value="المنيعة">المنيعة</option>
+  </select>
 
-<!-- سعر التوصيل -->
-<p style="margin-top:10px; font-weight:bold; color:#444;">
-🚚 سعر التوصيل: يختلف حسب الولاية (مثال: 600 دج)
-</p>
-  <!-- المجموع الكلي -->
-  <label>المجموع الكلي (سعر المنتج + التوصيل)</label>
-  <input type="text" id="total" name="entry.1397734668" readonly>
+  <!-- السعر الكلي (يظهر للزبون فقط) -->
+  <div id="summary" style="margin-top:15px; padding:10px; border:1px solid #ddd; border-radius:5px;">
+    <strong>ملخص الطلبية:</strong>
+    <p id="totalPrice">السعر الكلي: -</p>
+  </div>
 
+  <!-- زر تأكيد -->
   <button type="submit">تأكيد الطلب</button>
 </form>
 
-<iframe name="hidden_iframe" style="display:none;"
-        onload="if(submitted) {window.location='thankyou.html';}"></iframe>
+<!-- iframe مخفي -->
+<iframe name="hidden_iframe" style="display:none;"></iframe>
 
 <script>
+  // سعر المنتج
+  const productPrice = 2500; // دج
+
+  // جدول أسعار التوصيل
+  const shippingPrices = {
+    "أدرار": 900, "الشلف": 600, "الأغواط": 700, "أم البواقي": 600, "باتنة": 550,
+    "بجاية": 500, "بسكرة": 650, "بشار": 800, "البليدة": 400, "البويرة": 500,
+    "تمنراست": 1200, "تبسة": 700, "تلمسان": 600, "تيارت": 650, "تيزي وزو": 450,
+    "الجزائر": 400, "الجلفة": 800, "جيجل": 600, "سطيف": 500, "سعيدة": 650,
+    "سكيكدة": 700, "سيدي بلعباس": 600, "عنابة": 700, "قالمة": 650, "قسنطينة": 700,
+    "المدية": 500, "مستغانم": 600, "المسيلة": 650, "معسكر": 600, "ورقلة": 800,
+    "وهران": 600, "البيض": 700, "إليزي": 1100, "برج بوعريريج": 500, "بومرداس": 450,
+    "الطارف": 700, "تندوف": 1300, "تيسمسيلت": 650, "الوادي": 800, "خنشلة": 650,
+    "سوق أهراس": 700, "تيبازة": 450, "ميلة": 600, "عين الدفلى": 600, "النعامة": 850,
+    "عين تموشنت": 600, "غرداية": 850, "غليزان": 650, "تيميمون": 1000,
+    "برج باجي مختار": 1200, "بني عباس": 950, "أولاد جلال": 650, "إن صالح": 1200,
+    "إن قزام": 1300, "تقرت": 850, "جانت": 1400, "المغير": 850, "المنيعة": 950
+  };
+
+  // تحديث السعر الكلي عند اختيار الولاية
+  document.getElementById("wilaya").addEventListener("change", function() {
+    const wilaya = this.value;
+    const shipping = shippingPrices[wilaya] || 0;
+    const total = productPrice + shipping;
+    document.getElementById("totalPrice").textContent = 
+      "سعر المنتج: " + productPrice + " دج + سعر التوصيل: " + shipping + " دج = السعر الكلي: " + total + " دج";
+  });
+
+  // بعد الإرسال يروح لصفحة الشكر
+  function handleSubmit() {
+    setTimeout(() => {
+      window.location.href = "thankyou.html";
+    }, 500);
+    return true;
+  }
+</script>
   var submitted = false;
   var productPrice = 2000; // غيّر هذا بسعر منتجك
 
@@ -1118,7 +1156,10 @@ function redirectToThankYou() {
 
 
 
+
+
     
+
 
 
 
