--- a/thankyou.html
+++ b/thankyou.html
@@ -1,80 +1,32 @@
-
-
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شكراً لك!</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
-
-        :root {
-            --primary-color: #ff914d;
-            --dark-color: #1a4d29;
-            --font-family: 'Cairo', sans-serif;
-        }
-
-        body {
-            font-family: var(--font-family);
-            background-color: #FFF8E1;
-            color: var(--dark-color);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-        }
-
-        .thankyou-container {
-            background: white;
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 90%;
-            border-top: 5px solid var(--primary-color);
-        }
-
-        .thankyou-container h1 {
-            color: var(--primary-color);
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        .thankyou-container p {
-            font-size: 1.1rem;
-            margin-bottom: 25px;
-            line-height: 1.8;
-        }
-        
-        .thankyou-container p:last-of-type {
-            color: #555;
-            font-size: 0.9rem;
-        }
-
-        .home-button {
-            display: inline-block;
-            background: var(--dark-color);
-            color: white;
-            padding: 12px 30px;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: bold;
-            transition: background 0.3s ease;
-        }
-
-        .home-button:hover {
-            background: #4a6c4c;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>شكراً على طلبك</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f9f9f9;
+    }
+    .thankyou {
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+    h1 {
+      color: #28a745;
+    }
+  </style>
 </head>
 <body>
-    <div class="thankyou-container">
-        <h1>✅ شكراً، استلمنا طلبك!</h1>
-        <p>سوف نتواصل معك قريباً لتأكيد الطلب عبر الهاتف.</p>
-        <a href="index.html" class="home-button">العودة إلى الصفحة الرئيسية</a>
-    </div>
+  <div class="thankyou">
+    <h1>✅ شكراً على طلبك</h1>
+    <p>لقد استلمنا طلبك وسنتصل بك قريباً لتأكيد التفاصيل.</p>
+  </div>
 </body>
 </html>
