--- a/index.html
+++ b/index.html
@@ -1,408 +1,183 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- SEO Meta Tags -->
-  <title>خلطة العسل وحبوب اللقاح للأطفال - تقوية المناعة بشكل طبيعي</title>
-  <meta name="description" content="اشتري الآن خلطة طبيعية 100% من العسل الجبلي وحبوب اللقاح وغذاء ملكات النحل لتقوية مناعة الأطفال وزيادة النشاط. التوصيل مجاني والدفع عند الاستلام.">
-  <meta name="keywords" content="عسل, حبوب اللقاح, غذاء ملكات النحل, مناعة الأطفال, تقوية المناعة, شراء عسل في الجزائر, منتجات طبيعية, عسل جبلي, بروبوليس, العكبر, العسل للأطفال, خلطة العسل, علاج طبيعي, تقوية المناعة للأطفال">
-  <meta property="og:title" content="خلطة العسل وحبوب اللقاح للأطفال">
-  <meta property="og:description" content="تقوية المناعة وزيادة النشاط بخلطة طبيعية 100% من منتجات النحل. التوصيل مجاني والدفع عند الاستلام.">
-  <meta property="og:image" content="honey-product.jpg">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="ar_AR">
+  <title>خلطة العسل وحبوب اللقاح للأطفال | النمو والتركيز والنشاط</title>
+  <meta name="description" content="خلطة طبيعية من العسل الجبلي وحبوب اللقاح وغذاء ملكات النحل لدعم نمو الأطفال، زيادة التركيز، تقوية النشاط الذهني، وتحسين النوم والشهية. التوصيل مجاني عند شراء أكثر من عبوتين.">
+  <meta name="keywords" content="عسل للأطفال, خلطة عسل, حبوب اللقاح, غذاء ملكات النحل, تقوية المناعة, نمو الأطفال, زيادة التركيز, التوصيل مجاني, شراء عسل في الجزائر">
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      direction: rtl;
-      background: #fdfdfd;
-    }
+    body {font-family: Tahoma, Arial, sans-serif; margin:0; padding:0; background:#fff; color:#333; line-height:1.6;}
+    header {background:#c00; color:#fff; text-align:center; padding:8px; font-weight:bold;}
+    .top-buttons {position:fixed; top:10px; left:10px; display:flex; flex-direction:column; gap:10px; z-index:1000;}
+    .top-buttons a {background:#25d366; color:#fff; padding:8px 12px; border-radius:50%; font-size:18px; text-decoration:none; text-align:center;}
+    .top-buttons a.phone {background:#007bff;}
 
-    /* الشريط الأحمر */
-    .top-bar {
-      background: #e63946;
-      color: white;
-      text-align: center;
-      padding: 10px;
-      font-weight: bold;
-    }
+    .container {width:90%; max-width:1000px; margin:0 auto; padding:20px;}
+    .product-main {text-align:center; margin-bottom:30px;}
+    .product-main img {width:200px; margin-bottom:15px;}
+    h1 {font-size:26px; color:#222; margin-bottom:10px;}
+    h2 {font-size:20px; color:#555; margin-bottom:15px;}
 
-    /* الهيرو */
-    .hero {
-      text-align: center;
-      padding: 40px 20px;
-      background: #fff;
-    }
+    form {background:#f9f9f9; padding:20px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); margin-bottom:30px;}
+    form label {display:block; margin-bottom:5px; font-weight:bold;}
+    form input, form select {width:100%; padding:10px; margin-bottom:15px; border:1px solid #ccc; border-radius:5px; font-size:16px;}
+    .summary {background:#fff; padding:15px; border:1px solid #ddd; border-radius:5px; margin-top:15px;}
+    .summary p {margin:5px 0;}
 
-    .hero h1 {
-      font-size: 28px;
-      color: #333;
-    }
+    .btn {background:#28a745; color:#fff; border:none; padding:12px; font-size:18px; cursor:pointer; border-radius:6px; width:100%;}
+    .btn:hover {background:#218838;}
 
-    .hero h2 {
-      font-size: 18px;
-      color: #666;
-      margin-bottom: 20px;
-    }
+    .section {margin-bottom:40px;}
+    .section h3 {text-align:center; font-size:22px; margin-bottom:20px; color:#222;}
+    .features, .ingredients, .upsells {display:grid; grid-template-columns:repeat(auto-fit, minmax(200px, 1fr)); gap:20px;}
+    .feature, .ingredient, .upsell {background:#fdfdfd; padding:15px; border:1px solid #ddd; border-radius:8px; text-align:center;}
+    .ingredient img, .upsell img {width:100px; height:100px; object-fit:cover; margin-bottom:10px;}
 
-    .hero img {
-      max-width: 250px;
-      border-radius: 12px;
-      margin-top: 15px;
-    }
-
-    /* العروض */
-    .offers {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      padding: 30px 20px;
-      background: #f9f9f9;
-    }
-
-    .offer {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 20px;
-      width: 220px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-    }
-
-    .offer h3 {
-      margin: 10px 0;
-      color: #333;
-    }
-
-    .offer p {
-      font-size: 16px;
-      color: #28a745;
-      font-weight: bold;
-    }
-
-    /* سيكشن */
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    section h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    section p {
-      line-height: 1.8;
-      color: #555;
-    }
-
-    /* آراء الزبائن */
-    .testimonials {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-
-    .testimonial {
-      background: #fff;
-      border-radius: 12px;
-      padding: 15px;
-      width: 220px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      font-size: 14px;
-    }
-
-    /* الفورم */
-    form {
-      max-width: 400px;
-      margin: 30px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-
-    input, select {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 15px;
-      box-sizing: border-box;
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      background: #28a745;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #218838;
-    }
-
-    .order-summary {
-      background: #f9f9f9;
-      border: 1px solid #eee;
-      border-radius: 8px;
-      font-size: 14px;
-      padding: 10px;
-      margin-top: 10px;
-    }
+    .trust {background:#f7f7f7; padding:20px; border-radius:8px; text-align:center;}
+    footer {background:#222; color:#fff; text-align:center; padding:15px; margin-top:40px;}
   </style>
 </head>
 <body>
 
-  <!-- الشريط الأحمر -->
-  <div class="top-bar">
-    🎉 عرض محدود: التوصيل مجاني 🚚 والدفع عند الاستلام ✅
-  </div>
+<header>🎉 عرض محدود: التوصيل مجاني عند شراء أكثر من عبوتين | الدفع عند الاستلام 🎉</header>
 
-  <!-- الهيرو -->
-  <div class="hero">
+<div class="top-buttons">
+  <a href="https://wa.me/213555000000" target="_blank">💬</a>
+  <a href="tel:+213555000000" class="phone">📞</a>
+</div>
+
+<div class="container">
+  <!-- المنتج الرئيسي -->
+  <div class="product-main">
+    <img src="product.png" alt="خلطة العسل وحبوب اللقاح">
     <h1>خلطة العسل وحبوب اللقاح للأطفال</h1>
-    <h2>منتج طبيعي 100% لتقوية المناعة وزيادة النشاط</h2>
-    <img src="honey-product.jpg" alt="خلطة العسل وحبوب اللقاح">
+    <h2>سر طبيعي لدعم النمو، زيادة التركيز، النشاط الذهني، تحسين النوم والشهية</h2>
+    <p>منتج طبيعي مكون من العسل الجبلي وحبوب اللقاح وغذاء ملكات النحل، مختار بعناية ليناسب الأطفال ويمنحهم طاقة وحيوية يومية.</p>
   </div>
-
-  <!-- العروض -->
-  <div class="offers">
-    <div class="offer">
-      <h3>عبوة واحدة</h3>
-      <p>2500 دج</p>
-    </div>
-    <div class="offer">
-      <h3>عبوتان</h3>
-      <p>4500 دج</p>
-    </div>
-    <div class="offer">
-      <h3>3 عبوات + 1 مجاناً</h3>
-      <p>7500 دج</p>
-    </div>
-  </div>
-
-  <!-- الفوائد -->
-  <section>
-    <h2>فوائد الخلطة</h2>
-    <p>
-      🌿 تقوية جهاز المناعة بشكل طبيعي.<br>
-      🌿 زيادة النشاط والطاقة للأطفال.<br>
-      🌿 تحسين الهضم والشهية.<br>
-      🌿 دعم النمو العقلي والجسدي.<br>
-      🌿 حماية الجسم من الأمراض الموسمية.
-    </p>
-  </section>
-
-  <!-- المكونات -->
-  <section>
-    <h2>المكونات الطبيعية</h2>
-    <p>
-      🍯 عسل جبلي نقي.<br>
-      🌸 حبوب لقاح طازجة.<br>
-      👑 غذاء ملكات النحل.<br>
-      🐝 العكبر (البروبوليس).<br>
-      🌿 مكونات طبيعية أخرى من منتجات النحل.
-    </p>
-  </section>
-
-  <!-- آراء الزبائن -->
-  <section>
-    <h2>آراء الزبائن</h2>
-    <div class="testimonials">
-      <div class="testimonial">"زاد النشاط عند أولادي بشكل واضح" - أم محمد</div>
-      <div class="testimonial">"خدمة ممتازة والتوصيل سريع" - أحمد من وهران</div>
-      <div class="testimonial">"منتج طبيعي فعلاً وأوصي به" - سمية من قسنطينة</div>
-    </div>
-  </section>
 
   <!-- الفورم -->
-<form id="orderForm" 
-      action="https://docs.google.com/forms/d/e/XXXXXXX/formResponse" 
-      method="POST" target="hidden_iframe" 
-      onsubmit="submitted=true;">
+  <form id="orderForm" name="orderForm">
+    <label>الاسم الكامل</label>
+    <input type="text" name="name" placeholder="أدخل اسمك الكامل" required>
+    <label>رقم الهاتف</label>
+    <input type="tel" name="phone" placeholder="أدخل رقم هاتفك" required>
+    <label>الولاية</label>
+    <select name="state" id="state" required>
+      <option value="">اختر ولايتك</option>
+      <option value="الجزائر">الجزائر</option>
+      <option value="وهران">وهران</option>
+      <option value="سطيف">سطيف</option>
+      <option value="عنابة">عنابة</option>
+      <option value="تمنراست">تمنراست</option>
+      <!-- زيد باقي الولايات هنا -->
+    </select>
+    <label>عدد العبوات</label>
+    <select name="quantity" id="quantity" required>
+      <option value="1">1 عبوة</option>
+      <option value="2">2 عبوات</option>
+      <option value="3">3 عبوات + 1 مجانا</option>
+    </select>
+    <div class="summary" id="summary">
+      <p>سعر الوحدة: 2800 دج</p>
+      <p>سعر التوصيل: <span id="shipping">0</span> دج</p>
+      <p><strong>المجموع الكلي: <span id="total">0</span> دج</strong></p>
+    </div>
+    <button type="submit" class="btn">✅ أطلب الآن</button>
+  </form>
 
-  <!-- الاسم -->
-  <label>الاسم الكامل</label>
-  <input type="text" name="entry.111111" placeholder="الاسم الكامل" required>
-
-  <!-- الهاتف -->
-  <label>رقم الهاتف</label>
-  <input type="tel" name="entry.222222" placeholder="07XXXXXXXX" required pattern="[0-9]{10}">
-
-  <!-- الولاية -->
-  <label>الولاية</label>
-  <select id="state" name="entry.333333" required>
-    <option value="">اختر ولايتك</option>
-    <option value="الجزائر">الجزائر</option>
-    <option value="البليدة">البليدة</option>
-    <option value="بومرداس">بومرداس</option>
-    <option value="تيبازة">تيبازة</option>
-    <option value="تيزي وزو">تيزي وزو</option>
-    <option value="المدية">المدية</option>
-    <option value="البويرة">البويرة</option>
-    <option value="عين الدفلى">عين الدفلى</option>
-    <option value="الشلف">الشلف</option>
-    <option value="وهران">وهران</option>
-    <option value="مستغانم">مستغانم</option>
-    <option value="معسكر">معسكر</option>
-    <option value="غليزان">غليزان</option>
-    <option value="سيدي بلعباس">سيدي بلعباس</option>
-    <option value="تلمسان">تلمسان</option>
-    <option value="سعيدة">سعيدة</option>
-    <option value="تيارت">تيارت</option>
-    <option value="تيسمسيلت">تيسمسيلت</option>
-    <option value="الجلفة">الجلفة</option>
-    <option value="الأغواط">الأغواط</option>
-    <option value="برج بوعريريج">برج بوعريريج</option>
-    <option value="سطيف">سطيف</option>
-    <option value="باتنة">باتنة</option>
-    <option value="قسنطينة">قسنطينة</option>
-    <option value="أم البواقي">أم البواقي</option>
-    <option value="قالمة">قالمة</option>
-    <option value="سوق أهراس">سوق أهراس</option>
-    <option value="عنابة">عنابة</option>
-    <option value="الطارف">الطارف</option>
-    <option value="خنشلة">خنشلة</option>
-    <option value="تبسة">تبسة</option>
-    <option value="المسيلة">المسيلة</option>
-    <option value="بجاية">بجاية</option>
-    <option value="جيجل">جيجل</option>
-    <option value="ميلة">ميلة</option>
-    <option value="بسكرة">بسكرة</option>
-    <option value="الوادي">الوادي</option>
-    <option value="ورقلة">ورقلة</option>
-    <option value="غرداية">غرداية</option>
-    <option value="البيض">البيض</option>
-    <option value="النعامة">النعامة</option>
-    <option value="أدرار">أدرار</option>
-    <option value="تمنراست">تمنراست</option>
-    <option value="إيليزي">إيليزي</option>
-    <option value="جانت">جانت</option>
-    <option value="إن صالح">إن صالح</option>
-    <option value="برج باجي مختار">برج باجي مختار</option>
-  </select>
-
-  <!-- عدد العبوات -->
-  <label>اختر العرض</label>
-  <select id="quantity" name="entry.444444" required>
-    <option value="1">1 عبوة</option>
-    <option value="2">2 عبوتين</option>
-    <option value="3">3 عبوات</option>
-    <option value="4">4 عبوات (واحدة مجانا)</option>
-  </select>
-
-  <!-- ملخص الطلبية -->
-  <div id="orderSummary" style="margin-top:15px; padding:10px; border:1px solid #ddd; background:#f9f9f9;">
-    <p><strong>ملخص الطلبية:</strong></p>
-    <p id="summaryText">الرجاء اختيار الولاية وعدد العبوات</p>
+  <!-- الفوائد -->
+  <div class="section">
+    <h3>فوائد الخلطة لأطفالك</h3>
+    <div class="features">
+      <div class="feature">✨ دعم النمو الصحي بفضل الفيتامينات الطبيعية</div>
+      <div class="feature">🧠 تعزيز التركيز والنشاط الذهني</div>
+      <div class="feature">📚 تحسين الحفظ والأداء الدراسي</div>
+      <div class="feature">😴 نوم هادئ وعميق</div>
+      <div class="feature">🍯 زيادة الشهية بشكل طبيعي</div>
+      <div class="feature">💪 تقوية المناعة والحيوية اليومية</div>
+    </div>
   </div>
 
-  <!-- خانة السعر الكلي (مخفية لكنها ترسل لـ Google Sheets) -->
-  <input type="hidden" id="totalPriceField" name="entry.555555">
+  <!-- المكونات -->
+  <div class="section">
+    <h3>مكونات طبيعية 100%</h3>
+    <div class="ingredients">
+      <div class="ingredient"><img src="honey.jpg" alt="عسل جبلي"><p>العسل الجبلي</p></div>
+      <div class="ingredient"><img src="pollen.jpg" alt="حبوب اللقاح"><p>حبوب اللقاح</p></div>
+      <div class="ingredient"><img src="royaljelly.jpg" alt="غذاء ملكات النحل"><p>غذاء ملكات النحل</p></div>
+      <div class="ingredient"><img src="propolis.jpg" alt="البروبوليس"><p>البروبوليس</p></div>
+    </div>
+  </div>
 
-  <!-- زر الإرسال -->
-  <button type="submit">تأكيد الطلب</button>
-</form>
+  <!-- صورة الأم -->
+  <div class="section" style="text-align:center;">
+    <img src="mother-child.jpg" alt="أم تطعم طفلها العسل" style="width:100%; max-width:600px; border-radius:8px;">
+  </div>
 
-<iframe name="hidden_iframe" style="display:none;" 
-        onload="if(submitted) {window.location='thankyou.html';}"></iframe>
+  <!-- منتجات إضافية -->
+  <div class="section">
+    <h3>منتجات أخرى قد تهمك</h3>
+    <div class="upsells">
+      <div class="upsell"><img src="men.jpg" alt=""><p>خلطة القدرة للرجال</p><button class="btn">اطلب الآن</button></div>
+      <div class="upsell"><img src="women.jpg" alt=""><p>خلطة زيادة فرص الحمل</p><button class="btn">اطلب الآن</button></div>
+      <div class="upsell"><img src="weight.jpg" alt=""><p>خلطة التسمين</p><button class="btn">اطلب الآن</button></div>
+      <div class="upsell"><img src="kids.jpg" alt=""><p>خلطة التبول اللاارادي للأطفال</p><button class="btn">اطلب الآن</button></div>
+    </div>
+  </div>
+
+  <!-- قسم طمأنة -->
+  <div class="trust">
+    <h3>لماذا تختار منتجاتنا؟</h3>
+    <p>✅ مكونات طبيعية وآمنة 100% للأطفال</p>
+    <p>✅ سرعة التوصيل لجميع الولايات</p>
+    <p>✅ سياسة إرجاع مرنة</p>
+    <p>✅ ثقة مئات العائلات الجزائرية</p>
+  </div>
+</div>
+
+<footer>© 2025 جميع الحقوق محفوظة - متجرك للعسل الطبيعي</footer>
 
 <script>
-  var submitted = false;
-
-  // أسعار التوصيل لكل ولاية
-  const deliveryPrices = {
-    "الجزائر": 400, "البليدة": 400, "بومرداس": 400, "تيبازة": 400,
-    "تيزي وزو": 600, "المدية": 600, "البويرة": 600, "عين الدفلى": 600, "الشلف": 600,
-    "وهران": 700, "مستغانم": 700, "معسكر": 700, "غليزان": 700, "سيدي بلعباس": 700,
-    "تلمسان": 800, "سعيدة": 800, "تيارت": 800, "تيسمسيلت": 800, "الجلفة": 800, "الأغواط": 800,
-    "برج بوعريريج": 800, "سطيف": 800, "باتنة": 800, "قسنطينة": 800, "أم البواقي": 800, "قالمة": 800,
-    "سوق أهراس": 900, "عنابة": 900, "الطارف": 900, "خنشلة": 900, "تبسة": 900, "المسيلة": 900,
-    "بجاية": 900, "جيجل": 900, "ميلة": 900,
-    "بسكرة": 1000, "الوادي": 1000, "ورقلة": 1000, "غرداية": 1000, "البيض": 1000, "النعامة": 1000,
-    "أدرار": 1200, "تمنراست": 1200, "إيليزي": 1200, "جانت": 1200, "إن صالح": 1200, "برج باجي مختار": 1200
+  const basePrice = 2800;
+  const shippingPrices = {
+    "الجزائر": 400,
+    "وهران": 600,
+    "سطيف": 500,
+    "عنابة": 700,
+    "تمنراست": 1000
   };
 
-  const productPrice = 2800;
+  const quantityEl = document.getElementById('quantity');
+  const stateEl = document.getElementById('state');
+  const shippingEl = document.getElementById('shipping');
+  const totalEl = document.getElementById('total');
 
-  function updateSummary() {
-    const state = document.getElementById("state").value;
-    const qty = parseInt(document.getElementById("quantity").value);
-    let delivery = deliveryPrices[state] || 0;
-
-    // التوصيل مجاني إذا أكثر من 2 عبوات
-    if (qty > 2) delivery = 0;
-
-    const total = (qty * productPrice) + delivery;
-
-    // عرض ملخص للزبون
-    document.getElementById("summaryText").innerText =
-      `عدد العبوات: ${qty}\n` +
-      `سعر الوحدة: ${productPrice} دج\n` +
-      `سعر التوصيل: ${delivery} دج\n` +
-      `المجموع الكلي: ${total} دج`;
-
-    // تمرير المجموع لـ Google Sheet
-    document.getElementById("totalPriceField").value = total;
+  function calculateTotal() {
+    const qty = parseInt(quantityEl.value) || 1;
+    const state = stateEl.value;
+    let shipping = shippingPrices[state] || 0;
+    if (qty > 2) shipping = 0;
+    const total = basePrice * qty + shipping;
+    shippingEl.textContent = shipping;
+    totalEl.textContent = total;
   }
 
-  document.getElementById("state").addEventListener("change", updateSummary);
-  document.getElementById("quantity").addEventListener("change", updateSummary);
+  quantityEl.addEventListener('change', calculateTotal);
+  stateEl.addEventListener('change', calculateTotal);
+
+  // فورم Google Sheets
+  document.getElementById('orderForm').addEventListener('submit', function(e){
+    e.preventDefault();
+    fetch("YOUR_GOOGLE_SHEET_WEBAPP_URL", {
+      method: "POST",
+      body: new FormData(this)
+    }).then(() => {
+      window.location.href = "thankyou.html";
+    });
+  });
 </script>
 
-  <script>
-    const offer = document.getElementById("offer");
-    const state = document.getElementById("state");
-    const totalEl = document.getElementById("total");
-
-    const prices = {
-      "1": 2500,
-      "2": 4500,
-      "3": 7500
-    };
-
-    const shipping = {
-      "الجزائر": 400,
-      "وهران": 500,
-      "سطيف": 600,
-      "قسنطينة": 500,
-      "عنابة": 700
-    };
-
-    function updateTotal() {
-      const offerValue = offer.value;
-      const stateValue = state.value;
-
-      let total = prices[offerValue] || 0;
-      if (stateValue && shipping[stateValue]) {
-        total += shipping[stateValue];
-      }
-
-      totalEl.textContent = total + " دج";
-    }
-
-    offer.addEventListener("change", updateTotal);
-    state.addEventListener("change", updateTotal);
-    updateTotal();
-  </script>
 </body>
 </html>
-
-
