--- a/thankyou.html
+++ b/thankyou.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تم استلام طلبك بنجاح ✅</title>
-  <meta name="description" content="شكراً لثقتكم بنا. لقد استلمنا طلبكم وسيتم التواصل معكم في أقرب وقت لتأكيد التفاصيل.">
-  <style>
-    body {font-family: Tahoma, Arial, sans-serif; background:#f9f9f9; color:#333; margin:0; padding:0; text-align:center;}
-    .container {max-width:600px; margin:50px auto; background:#fff; padding:30px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
-    h1 {color:#28a745; font-size:28px; margin-bottom:20px;}
-    p {font-size:18px; margin-bottom:15px;}
-    a.btn {display:inline-block; margin-top:20px; background:#28a745; color:#fff; padding:12px 25px; border-radius:6px; font-size:18px; text-decoration:none;}
-    a.btn:hover {background:#218838;}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>شكراً — تم استلام طلبك</title>
+<style>
+  body{font-family:Arial, sans-serif;background:#07101a;color:#fff;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
+  .box{background:linear-gradient(180deg,#0b1620,#07101a);padding:28px;border-radius:12px;max-width:720px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.6)}
+  h1{margin:0 0 8px;font-size:24px;color:#f6c34b}
+  p{color:#bcd3de}
+  .btn{margin-top:14px;padding:10px 14px;border-radius:8px;background:#28a745;color:#fff;border:0;cursor:pointer;text-decoration:none}
+</style>
 </head>
 <body>
-
-  <div class="container">
-    <h1>✅ شكراً لطلبك</h1>
-    <p>لقد استلمنا طلبك بنجاح.</p>
-    <p>سيتواصل معك فريقنا عبر الهاتف قريباً لتأكيد تفاصيل الطلبية والتوصيل.</p>
-    <p>نذكرك أن <strong>الدفع عند الاستلام</strong> وأن <strong>التوصيل مجاني عند شراء أكثر من عبوتين</strong>.</p>
-    <a href="index.html" class="btn">⬅️ العودة إلى الصفحة الرئيسية</a>
+  <div class="box">
+    <h1>شكراً! تم استلام طلبك</h1>
+    <p>سيتواصل معك فريقنا قريباً لتأكيد الطلب وترتيب التوصيل. شكراً لثقتك في مناحل وعسل آل البوسعيدي.</p>
+    <a class="btn" href="index.html">العودة للرئيسية</a>
   </div>
-
 </body>
 </html>
