--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ input,select{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255
 
 <script>
 /* ========== CONFIG ========= */
-const WEBAPP_URL = "YOUR_WEB_APP_URL"; // <-- ضع رابط Web App هنا (من Google Apps Script)
+const WEBAPP_URL = "https://script.google.com/macros/s/AKfycby5G3X57nZHJwt6ANxlvdWFad-L-w_qTX-circsfvkYjCC6T83OzYdGKP6iXQAwlmEiLQ/exec"; // <-- ضع رابط Web App هنا (من Google Apps Script)
 const UNIT_PRICE = 2800;
 const shippingTable = {
   "الجزائر":400,"البليدة":400,"بومرداس":400,"تيبازة":400,
@@ -388,3 +388,4 @@ document.getElementById('orderForm').addEventListener('submit', function(e){
 </script>
 </body>
 </html>
+
