--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ input,select{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255
 
 <script>
 /* ==== ضع رابط Web App هنا (رابط /exec من Google Apps Script) ==== */
-const WEBAPP_URL = "PUT_YOUR_WEBAPP_URL_HERE";
+const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbwgRZm4ppj_HRz-gaDf4UKg-9aN7bYots2xEGsoQPQ2eno_dK0NHsNIwGZg7wriI6YULQ/exec";
 /* ==== ثابت السعر وقائمة الشحن حسب الولاية ==== */
 const UNIT_PRICE = 2800;
 const shippingTable = { "الجزائر":400,"البليدة":400,"بومرداس":400,"تيبازة":400,"تيزي وزو":700,"البويرة":700,"المدية":700,"عين الدفلى":700,"الشلف":700,"وهران":800,"مستغانم":800,"معسكر":800,"غليزان":800,"سيدي بلعباس":800,"تلمسان":900,"سعيدة":900,"تيارت":900,"تيسمسيلت":900,"الجلفة":900,"الأغواط":900,"برج بوعريريج":900,"سطيف":900,"باتنة":900,"قسنطينة":1000,"أم البواقي":1000,"قالمة":1000,"سوق أهراس":1000,"عنابة":1000,"الطارف":1000,"خنشلة":1000,"تبسة":1000,"المسيلة":1000,"بجاية":1000,"جيجل":1000,"ميلة":1000,"بسكرة":1100,"الوادي":1100,"ورقلة":1100,"غرداية":1100,"البيض":1100,"النعامة":1300,"أدرار":1300,"تمنراست":1300,"إيليزي":1300,"جانت":1300,"إن صالح":1300,"برج باجي مختار":1300 };
@@ -366,3 +366,5 @@ document.getElementById('orderForm').addEventListener('submit', function(e){
 </script>
 </body>
 </html>
+
+
