--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ input,select{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255
       </section>
 
       <section class="card" style="margin-top:12px;text-align:center">
-        <img src="mother-child.jpg" style="max-width:100%;border-radius:10px">
+        <img src="https://i.imgur.com/1BDPPhx.png" style="max-width:100%;border-radius:10px">
         <p class="small" style="margin-top:10px">صورة تمثيلية: أم تطعم طفلها العسل في الطبيعة</p>
       </section>
 
@@ -366,5 +366,7 @@ document.getElementById('orderForm').addEventListener('submit', function(e){
 </script>
 </body>
 </html>
+
+
 
 
